--- a/HandPoseCamera/Info.plist
+++ b/HandPoseCamera/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>앨법 접근 권한을 허락해주세요</string>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 사용을 허락해주세요</string>
 	<key>CFBundleDevelopmentRegion</key>
